# haskell-template

./: Makefile  haskell-template.cabal
app/: Main.hs
share/doc/: cicd-shell.html
src/Template/: Prelude.hs  Random.hs
src/Template/Lens/: Playground.hs
src/Template/Math/: Expr.hs  Prime.hs  RPN.hs  Test.hs
src/Template/Math/RPN/: EvalError.hs
src/Template/Prelude/: Loop.hs  LoopN.hs
